--- a/src/assets/ScoreCard.css
+++ b/src/assets/ScoreCard.css
@@ -7,6 +7,14 @@
     max-width: 800px;
 }
 
+.score-title {
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: #264653;
+    margin-bottom: 2rem;
+}
+
 .score-table {
     width: 100%;
 }
