--- a/src/assets/Courses.css
+++ b/src/assets/Courses.css
@@ -60,9 +60,20 @@
     background-color: #238578;
 }
 
+.see-more-container {
+    text-align: center;
+    margin-top: 2rem;
+}
+
 @media (max-width: 768px) {
     .courses-container {
         grid-template-columns: 1fr;
         gap: 1rem;
+    }
+}
+
+@media (max-width: 430px) {
+    .explore-topics-section h2{
+        font-size: 1.5rem;
     }
 }
